-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S107580/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/df6bdd08-a0d8-48e2-b960-d0f91a860990/runs/8d511390-71bc-45fe-a706-e97ee371832a/workspace/open/src/hotspot/cpu/aarch64/c1_LIRAssembler_aarch64.cpp:227), pid=1292991, tid=1293014
# assert((addr.offset() & mask) == 0) failed: scaled offsets only
#
# JRE version: Java(TM) SE Runtime Environment (20.0) (fastdebug build 20-lworld4ea-2022-10-19-1330468.tobias.hartmann.valhalla)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-lworld4ea-2022-10-19-1330468.tobias.hartmann.valhalla, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, parallel gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x7174f8] LIR_Assembler::stack_slot_address(int, unsigned int, Register, int)+0x1f4
Current CompileTask:
C1: 380 59 % !b 3 osr::test @ 62 (82 bytes)
Stack: [0x0000fffbe0d20000,0x0000fffbe0f20000], sp=0x0000fffbe0f1bb70, free space=2030k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x7174f8] LIR_Assembler::stack_slot_address(int, unsigned int, Register, int)+0x1f4 (c1_LIRAssembler_aarch64.cpp:227)
V [libjvm.so+0x719358] LIR_Assembler::reg2stack(LIR_Opr, LIR_Opr, BasicType, bool)+0x4d4 (c1_LIRAssembler_aarch64.cpp:775)
V [libjvm.so+0x7130f0] LIR_Assembler::move_op(LIR_Opr, LIR_Opr, BasicType, LIR_PatchCode, CodeEmitInfo*, bool, bool)+0x3b0 (c1_LIRAssembler.cpp:932)
V [libjvm.so+0x71486c] LIR_Assembler::emit_lir_list(LIR_List*)+0xdc (c1_LIRAssembler.cpp:309)
V [libjvm.so+0x714fa0] LIR_Assembler::emit_code(BlockList*)+0x70 (c1_LIRAssembler.cpp:233)
V [libjvm.so+0x6b5324] Compilation::emit_code_body()+0x144 (c1_Compilation.cpp:351)
V [libjvm.so+0x6b5a44] Compilation::compile_java_method()+0x524 (c1_Compilation.cpp:413)
V [libjvm.so+0x6b6590] Compilation::compile_method()+0x1c0 (c1_Compilation.cpp:471)
V [libjvm.so+0x6b6f3c] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, bool, DirectiveSet*)+0x30c (c1_Compilation.cpp:603)
V [libjvm.so+0x6b87dc] Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x148 (c1_Compiler.cpp:251)
V [libjvm.so+0x9dae04] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa94 (compileBroker.cpp:2240)
V [libjvm.so+0x9db6d4] CompileBroker::compiler_thread_loop()+0x3f4 (compileBroker.cpp:1916)
V [libjvm.so+0xefd620] JavaThread::thread_main_inner()+0x21c (javaThread.cpp:700)
V [libjvm.so+0x1842f98] Thread::call_run()+0xf8 (thread.cpp:224)
V [libjvm.so+0x15330e4] thread_native_entry(Thread*)+0x100 (os_linux.cpp:710)
C [libpthread.so.0+0x7908] start_thread+0x188
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S107580/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/df6bdd08-a0d8-48e2-b960-d0f91a860990/runs/8d511390-71bc-45fe-a706-e97ee371832a/workspace/open/src/hotspot/cpu/aarch64/c1_LIRAssembler_aarch64.cpp:227), pid=1292991, tid=1293014
# assert((addr.offset() & mask) == 0) failed: scaled offsets only
#
# JRE version: Java(TM) SE Runtime Environment (20.0) (fastdebug build 20-lworld4ea-2022-10-19-1330468.tobias.hartmann.valhalla)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-lworld4ea-2022-10-19-1330468.tobias.hartmann.valhalla, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, parallel gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x7174f8] LIR_Assembler::stack_slot_address(int, unsigned int, Register, int)+0x1f4
Current CompileTask:
C1: 380 59 % !b 3 osr::test @ 62 (82 bytes)
Stack: [0x0000fffbe0d20000,0x0000fffbe0f20000], sp=0x0000fffbe0f1bb70, free space=2030k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x7174f8] LIR_Assembler::stack_slot_address(int, unsigned int, Register, int)+0x1f4 (c1_LIRAssembler_aarch64.cpp:227)
V [libjvm.so+0x719358] LIR_Assembler::reg2stack(LIR_Opr, LIR_Opr, BasicType, bool)+0x4d4 (c1_LIRAssembler_aarch64.cpp:775)
V [libjvm.so+0x7130f0] LIR_Assembler::move_op(LIR_Opr, LIR_Opr, BasicType, LIR_PatchCode, CodeEmitInfo*, bool, bool)+0x3b0 (c1_LIRAssembler.cpp:932)
V [libjvm.so+0x71486c] LIR_Assembler::emit_lir_list(LIR_List*)+0xdc (c1_LIRAssembler.cpp:309)
V [libjvm.so+0x714fa0] LIR_Assembler::emit_code(BlockList*)+0x70 (c1_LIRAssembler.cpp:233)
V [libjvm.so+0x6b5324] Compilation::emit_code_body()+0x144 (c1_Compilation.cpp:351)
V [libjvm.so+0x6b5a44] Compilation::compile_java_method()+0x524 (c1_Compilation.cpp:413)
V [libjvm.so+0x6b6590] Compilation::compile_method()+0x1c0 (c1_Compilation.cpp:471)
V [libjvm.so+0x6b6f3c] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, bool, DirectiveSet*)+0x30c (c1_Compilation.cpp:603)
V [libjvm.so+0x6b87dc] Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x148 (c1_Compiler.cpp:251)
V [libjvm.so+0x9dae04] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa94 (compileBroker.cpp:2240)
V [libjvm.so+0x9db6d4] CompileBroker::compiler_thread_loop()+0x3f4 (compileBroker.cpp:1916)
V [libjvm.so+0xefd620] JavaThread::thread_main_inner()+0x21c (javaThread.cpp:700)
V [libjvm.so+0x1842f98] Thread::call_run()+0xf8 (thread.cpp:224)
V [libjvm.so+0x15330e4] thread_native_entry(Thread*)+0x100 (os_linux.cpp:710)
C [libpthread.so.0+0x7908] start_thread+0x188