8295731: [lworld] C1's linear register allocator spill map is incorrect