src/hotspot/share/c1/c1_GraphBuilder.cpp
@@ -1261,9 +1261,9 @@ void GraphBuilder::stack_op(Bytecodes::Code code) {
           s.next();
           if (s.cur_bc() != Bytecodes::_pop) {
             w1->as_NewInlineTypeInstance()->set_not_larva_anymore();
-          }  else {
+          } else {
             w1->as_NewInlineTypeInstance()->increment_on_stack_count();
-           }
+          }
         }
         state()->raw_push(w1);
         state()->raw_push(w3);
